# kabu_micro_edge_c

./: .gitignore  CMakeLists.txt  README_RUN.md  WHY_NOT_GPP.md  auto_setup.ps1  build.ps1  check_status.ps1  config.example.json  demo.cpp  full_auto_build.ps1  install_tools.ps1  run_live.ps1  setup.ps1  simple_demo.cpp  start_live.cmd  vcpkg.json  watch_build.ps1
fixtures/python_oracle/config/: default.json
fixtures/python_oracle/runtime/: account_risk_snapshot.json  reconcile_plan.json
fixtures/python_oracle/signals/: breakout_packet.json
fixtures/python_oracle/strategy/: entry_decision.json  final_status.json  replay_snapshots.json
include/kabu_micro_edge/: app.hpp  config.hpp  config_loader.hpp  config_types.hpp  diagnostics.hpp  execution.hpp  execution_controller.hpp  execution_types.hpp  gateway.hpp  gateway_adapter.hpp  gateway_client.hpp  gateway_types.hpp  journal.hpp  live_rest_executor.hpp  live_safety.hpp  oms.hpp  replay.hpp  risk.hpp  signals.hpp  strategy.hpp  strategy_policy.hpp  telemetry.hpp  time_constants.hpp
include/kabu_micro_edge/app/: runtime.hpp
include/kabu_micro_edge/common/: time.hpp
src/: main.cpp
tests/: test_config.cpp  test_diagnostics.cpp  test_execution.cpp  test_gateway.cpp  test_journal.cpp  test_latency_report.cpp  test_live_rest_executor.cpp  test_oms.cpp  test_python_oracle.cpp  test_replay.cpp  test_risk.cpp  test_runtime.cpp  test_signals.cpp  test_strategy.cpp
tools/python_oracle/: export_fixtures.py
